--- a/rebar.config
+++ b/rebar.config
@@ -6,5 +6,5 @@
   {statsderl, "0.3.3",
     {git, "https://github.com/lpgauth/statsderl.git", {tag, "v0.3.3"}}},
   {system_stats, "0.2",
-    {git, "http://github.com/lpgauth/system-stats.git", {tag, "v0.2"}}}
+    {git, "https://github.com/lpgauth/system-stats.git", {tag, "v0.2"}}}
 ]}.
