--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 
 {deps, [
   {statsderl, "0.3.3",
-    {git, "https://github.com/lpgauth/statsderl.git", {tag, "v0.3.3"}}},
+    {git, "https://github.com/lpgauth/statsderl.git", {branch, "os"}}},
   {system_stats, "0.2.2",
     {git, "https://github.com/lpgauth/system-stats.git", {tag, "v0.2.2"}}}
 ]}.
