--- a/rebar.config
+++ b/rebar.config
@@ -5,6 +5,8 @@
 {deps, [
   {statsderl, "0.3.4",
     {git, "https://github.com/lpgauth/statsderl.git", {tag, "v0.3.4"}}},
+  {erl_optics, ".*",
+    {git, "https://github.com/contested-space/erl-optics.git", {branch, "fix/c99"}}},
   {system_stats, "0.2.2",
     {git, "https://github.com/lpgauth/system-stats.git", {tag, "v0.2.2"}}}
 ]}.
