--- a/rebar.config
+++ b/rebar.config
@@ -6,7 +6,7 @@
   {statsderl, "0.3.4",
     {git, "https://github.com/lpgauth/statsderl.git", {tag, "v0.3.4"}}},
   {erl_optics, ".*",
-    {git, "https://github.com/contested-space/erl-optics.git", {branch, "fix/c99"}}},
+    {git, "https://github.com/contested-space/erl-optics.git", {branch, "feature/normalize-poller"}}},
   {system_stats, "0.2.2",
     {git, "https://github.com/lpgauth/system-stats.git", {tag, "v0.2.2"}}}
 ]}.
